--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -1,3 +1,8 @@
+
+# Requirements for ModelTestingRapport
+# Compatible with Python 3.12.7 and CUDA 12.4/12.6
+
+# Core packages
 numpy>=1.26.0
 matplotlib>=3.8.0
 pandas>=2.2.0
@@ -5,12 +10,22 @@ pillow>=11.0.0
 opencv-python>=4.8.0.74
 scikit-learn>=1.4.0
 tqdm>=4.66.0
+
+# PyQt5 for GUI
 PyQt5>=5.15.9
 PyQt5-sip>=12.13.0
-# PyTorch and torchvision should be installed separately based on the specific Linux environment 
-# (e.g., CUDA version for Jetson, CPU-only for some Pis).
-# ultralytics will pull in torch and torchvision if not already present and compatible.
-ultralytics>=8.0.0 
-# seaborn, tabulate, rich are likely not needed for typical edge testing GUI/scripts.
-# If MTCNN (facenet-pytorch) is used in a specific Linux testing script, it should be installed separately.
-# For example: pip install facenet-pytorch --no-deps
+
+# PyTorch with CUDA support
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch>=2.2.0
+torchvision>=0.17.0
+
+# Ultralytics for YOLO model support
+ultralytics>=8.0.0
+
+# For report generation
+seaborn>=0.13.0
+tabulate>=0.9.0
+
+# Terminal UI improvements
+rich>=13.3.5 
